favicon.ico issue fixed.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <meta name="keywords"
             content="PHP Developer, Back end, HTML/CSS, Javascript, PHP, MySQL, MongoDB, Redis, RabbitMQ">
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-        <link rel="icon" href="/favicon.ico" type="image/x-icon">
-        <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
+        <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <title>Dipin Yadav | PHP Developer</title>
     </head>
 
